--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=spring-cloud-producer
 server.port=9000
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
+
+# spring boot 1.5.X 以上默认开通了安全认证，会拒绝访问/refresh
+management.security.enabled=false
