服务消费者 + 配置中心 最佳的基本配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=spring-cloud-producer
 
 server.port=9000
 
+# 配置注册中心地址。（自身提供或消费服务，都需要在注册中心注册）
 eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 
 # spring boot 1.5.X 以上默认开通了安全认证，会拒绝访问/refresh
-management.security.enabled=false
+#management.security.enabled=false
