--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,8 +1,14 @@
 # 注：由于spring.cloud.config配置部分需要先于application.properties加载，
 # 而spring boot默认bootstrap.properties优先加载，因此config客户端配置放在bootstrap.properties中。
 
-# 连接配置中心，获取关联的git仓库的master分支的producer-config-dev.properties的配置参数
+# 连接配置中心
+# 指定获取master分之下的producer-config-dev.properties
 spring.cloud.config.name=producer-config
 spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://localhost:8040/
 spring.cloud.config.label=master
+# 开启Config服务发现支持
+spring.cloud.config.discovery.enabled=true
+# 指定server端的name，即server端spring.application.name的值
+spring.cloud.config.discovery.serviceId=spring-cloud-config-server
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
