--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,14 @@ server.port=9000
 # 配置注册中心地址。（自身提供或消费服务，都需要在注册中心注册）
 eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 
-# spring boot 1.5.X 以上默认开通了安全认证，会拒绝访问/refresh
-#management.security.enabled=false
+# 刷新时，关闭安全验证。spring boot 1.5.X 以上默认开通了安全认证，会拒绝访问/refresh
+management.security.enabled=false
+
+# rabbit server
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=password
+
+# 开启消息跟踪
+spring.cloud.bus.trace.enabled=true
