--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=spring-cloud-producer
 
 server.port=9000
 
-# 配置注册中心地址。（自身提供或消费服务，都需要在注册中心注册）
-eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
+# 配置注册中心地址。（bootstrap中已经注册了该微服务，此处注释掉）
+#eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 
 # 刷新时，关闭安全验证。spring boot 1.5.X 以上默认开通了安全认证，会拒绝访问/refresh
 management.security.enabled=false
