--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,15 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+		</dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-		<dependency> <!-- 监控程序在运行时状态，其中就包括/refresh的功能 -->
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
 
         <!-- 引入spring-boot-starter-web包方便web测试 -->
         <dependency>
